# GrainSegmentation

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  plot_training_log.py  pyproject.toml
.cursor/rules/: slurm-safe-execution.mdc
SLURM/: blend_PPX.sh  deoverlap_and_crop.sh  merge_multichannel_tiff.sh  patchify.sh  prepare_env.sh  submit_unet_cc_vs_watershed_train_eval.sh  test_unet_patches.sh  test_unet_prepare_labels.sh  test_unet_submit.sh  test_unet_whole.sh  test_unet_whole_submit.sh  test_yolo.sh  test_yolo_patches.sh  test_yolo_submit.sh  train_yolo.sh  train_yolo_submit.sh  unet_patch_masks_from_yolo.sh
SLURM/preprocessing/: 00_download_source_data.sh  01_generate_sam2_starting_masks.sh  02_split_overlaps_and_crop_train_test.sh  03_create_ppx_and_ppl_ppx_blends.sh  04_create_multichannel_input_tiffs.sh  05_create_patch_datasets.sh  06_create_yolo_patch_datasets.sh  06_rasterize_polygons_for_unet.sh  07_rasterize_test_labels_for_unet.sh  08_create_unet_test_patches_from_yolo_patches.sh  export_prediction_rasters_to_polygons.sh  legacy_crop_images_single_section.sh
SLURM/unet/: run_unet_patch_test_eval.sh  run_unet_tune_and_train_variant.sh  run_unet_watershed_tuning.sh  run_unet_whole_test_eval.sh  submit_unet_patch_test_eval.sh  submit_unet_tune_and_train_variants.sh  submit_unet_watershed_tuning.sh  submit_unet_whole_test_eval.sh
SLURM/yolo/: run_yolo_patch_test_eval.sh  run_yolo_sahi_test_eval.sh  run_yolo_tune_or_train_variant.sh  submit_yolo_test_evaluations.sh  submit_yolo_tune_or_train_variants.sh
src/common/: coco_annotations.py  geometry.py  ground_truth.py  image_io.py  instance_maps.py  patching.py  pyproject.toml  samples.py
src/data_prep/: blend_tiffs.py  convert_rle_polygon.py  crop_images.py  crop_unet_masks_from_yolo_patches.py  download_data.py  gpkg_to_raster.py  pyproject.toml  raster_to_polygon.py  split_overlaps.py  split_tiff_channels.py  split_tiff_gpkg_to_yolo.py  stack_tiff_channels.py  starting_masks.py
src/data_prep/tests/: test_crop_unet_masks_from_yolo_patches.py  test_split_tiff_gpkg_to_yolo.py
src/evaluation/: arg_errors.py  evaluate.py  inference.py  instance_masks.py  metrics.py  plot_results.py  plot_tuning_charts.py  pyproject.toml  reporting.py  sample_checks.py  tune_watershed.py  watershed_json_to_eval_args.py
src/evaluation/tests/: test_evaluation.py
src/training/: data.py  model.py  pyproject.toml  train.py  train_unet_multi_input.py
src/training/tests/: test_slurm_scripts.py
src/unet/: pyproject.toml  train.py  train_unet_multi_input.py
src/yolo/: README.md  coco_instance_ap.py  config.py  dataset_yaml.py  evaluate.py  instance_label_maps.py  pipeline.py  pyproject.toml  train.py  visualize_dataset.py  yolo_seg_label_io.py
src/yolo/tests/: test_evaluate.py  test_instance_label_maps.py  test_pipeline.py
