[project]
name = "grainsegmentation-workspace"
version = "0.0.0"
description = "Workspace tooling for GrainSegmentation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.14"]

[tool.ruff]
target-version = "py312"
