[project]
name = "grainsegmentation-common"
version = "0.1.0"
description = "Shared utilities for GrainSegmentation pipelines"
requires-python = ">=3.12,<3.13"
dependencies = [
    "geopandas>=1.0.0",
    "numpy>=2.4.3",
    "pillow>=12.0.0",
    "pycocotools>=2.0.8",
    "shapely>=2.0.0",
    "tifffile>=2024.12.12",
]

[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common"]

[tool.setuptools.package-dir]
common = "."
