[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grainsegmentation-common",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-image>=0.25.0",
    "scipy>=1.17.1",
]

[tool.uv.sources]
grainsegmentation-common = { path = "../common", editable = true }
