[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grainsegmentation-common",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-image>=0.25.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
unet = ["training-pipeline"]

[tool.uv.sources]
grainsegmentation-common = { path = "../common", editable = true }
training-pipeline = { path = "../training", editable = true }

[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evaluation"]

[tool.setuptools.package-dir]
evaluation = "."
