[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "grainsegmentation-common",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-image>=0.25.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
unet = ["unet-pipeline"]

[tool.uv.sources]
grainsegmentation-common = { path = "../common", editable = true }
unet-pipeline = { path = "../unet", editable = true }

[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evaluation"]

[tool.setuptools.package-dir]
evaluation = "."
