[project]
name = "unet-pipeline"
version = "0.1.0"
description = "UNet training pipeline for GrainSegmentation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "grainsegmentation-common",
    "matplotlib>=3.10.7",
    "keras-tuner>=1.4.8",
    "scipy>=1.17.1",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
]

[tool.uv.sources]
grainsegmentation-common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["unet"]

[tool.setuptools.package-dir]
unet = "."
